<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">My NanoDegree Apps!</string>
    <string name="app_spot">SPOTIFY STREAMER</string>
    <string name="app_scores">SCORES APP</string>
    <string name="app_lib">LIBRARY APP</string>
    <string name="app_build">BUILD IT BIGGER</string>
    <string name="app_bacon">BACON READER</string>
    <string name="app_capstone">CAPSTONE:MY OWN APP</string>
    <string name="action_settings">Settings</string>
    <string name="btn_toast">This button will launch </string>
</resources>
