<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/text_header"
        android:textSize="20sp"
        android:id="@+id/txtheader"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtheader"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <Button
            android:id="@+id/btn_app1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_spot"
            android:textSize="14sp"
            style="@style/Buttons"
            android:padding="15dp"

            />
        <Button
            android:id="@+id/btn_app2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_scores"
            android:textSize="14sp"
            style="@style/Buttons"
            android:padding="15dp"
            />
        <Button
            android:id="@+id/btn_app3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_lib"
            android:textSize="14sp"
            style="@style/Buttons"
            android:padding="15dp"
            />
        <Button
            android:id="@+id/btn_app4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_build"
            android:textSize="14sp"
            style="@style/Buttons"
            android:padding="15dp"
            />
        <Button
            android:id="@+id/btn_app5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_bacon"
            android:textSize="14sp"
            style="@style/Buttons"
            android:padding="15dp"
            />
        <Button
            android:id="@+id/btn_app6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_capstone"
            android:textSize="14sp"
            android:padding="15dp"
            style="@style/Redbutton"
            />
    </LinearLayout>


</RelativeLayout>
</ScrollView>